2015-03-09
- Made new variables available for use in custom features (speed2d, speed3d, satellites_used, fix_time, pressure, temperature, direction)

2015-02-24
- New setting 'gps_segments_may_overlap' defines whether more instances can be created by allowing segments to partly overlap other segments.

2015-02-23
- Csv of gps record annotations should now be: 'device_info_serial,date_time,class_id' instead of old 'id,ts,class' (to be consistent with other parts of the software)
- Changed headers in features csv output to be consistent with rest of the application.